objects/WIP__c.object
<CustomObject>
    <description>This Object is used for WIP reports used By CE group</description>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <label>Account Short Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this help us to find out the Account Associated with the Device</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WIP</relationshipLabel>
        <relationshipName>WIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDRS_Status__c</fullName>
        <label>CDRS Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDRS__c</fullName>
        <label>CDRS #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSD__c</fullName>
        <label>CSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <label>Delay Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Matching device as per the Mask Set</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>WIP</relationshipLabel>
        <relationshipName>WIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer_Sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layer Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MASK_PO_Status__c</fullName>
        <label>MASK PO Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Set__c</fullName>
        <label>Mask Set</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_WIP_Actual_arrival__c</fullName>
        <label>Mask WIP Actual arrival</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_WIP_Status__c</fullName>
        <label>Mask WIP Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_WIP_current_Schedule__c</fullName>
        <label>Mask WIP current Schedule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proto_Actual_Start_Date__c</fullName>
        <label>Proto Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proto_Lot_Id__c</fullName>
        <label>Proto Lot Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proto_Lot_PO__c</fullName>
        <description>Updated from Data Warehouse</description>
        <label>Proto Lot PO#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>WIP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Device__c</columns>
        <columns>Account__c</columns>
        <columns>Fab__c</columns>
        <columns>NAME</columns>
        <columns>CDRS_Status__c</columns>
        <columns>CDRS__c</columns>
        <columns>MASK_PO_Status__c</columns>
        <columns>Proto_Lot_Id__c</columns>
        <columns>Proto_Actual_Start_Date__c</columns>
        <columns>CSD__c</columns>
        <columns>External_Id__c</columns>
        <columns>Layer_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>W-{00000000}</displayFormat>
        <label>WIP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WIP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>